[gd_scene load_steps=11 format=3 uid="uid://vu2f2b0lsqbj"]

[ext_resource type="Texture2D" uid="uid://bs480yh61205s" path="res://Sprites/UI/231.png" id="1_0pdcv"]
[ext_resource type="Script" path="res://menu.gd" id="1_fpd1l"]
[ext_resource type="Texture2D" uid="uid://nna7is7ti3jr" path="res://Sprites/UI/logosuka.png" id="3_7bmp6"]
[ext_resource type="Theme" uid="uid://xsafnmpyxcqb" path="res://menu.tres" id="3_db3w6"]
[ext_resource type="FontFile" uid="uid://c6u0ognsd2ia3" path="res://Fonts/intro-demo-black-caps.otf" id="7_4dev3"]
[ext_resource type="FontFile" uid="uid://crfbp0cjwu83x" path="res://Fonts/EpilepsySans.ttf" id="8_f5q82"]

[sub_resource type="Animation" id="Animation_0qsv4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logosuka:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(596, 319)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_0e013"]
resource_name = "menu_fadein"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logosuka:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(596, 319), Vector2(250, 319)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.1]
}

[sub_resource type="Animation" id="Animation_yggv3"]
resource_name = "start"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_slnv3"]
_data = {
"RESET": SubResource("Animation_0qsv4"),
"menu_fadein": SubResource("Animation_0e013"),
"start": SubResource("Animation_yggv3")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpd1l")

[node name="231" type="Sprite2D" parent="."]
position = Vector2(580, 385)
scale = Vector2(-798.166, 59.7814)
texture = ExtResource("1_0pdcv")

[node name="Logosuka" type="Sprite2D" parent="."]
position = Vector2(596, 319)
scale = Vector2(2, 2)
texture = ExtResource("3_7bmp6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = 61.0
offset_right = 303.0
offset_bottom = 161.0
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme = ExtResource("3_db3w6")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Играть -  test_room_4"

[node name="Options (NOT WORKING" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Настройки (НЕ РАБОТАЮТ)"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Выйти"

[node name="Play2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "TESTMUSICROOM "

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 334.0
offset_top = 619.0
offset_right = 675.0
offset_bottom = 642.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("7_4dev3")
text = "Нажмите пробел чтобы продолжить"

[node name="buildinfo" type="Label" parent="."]
layout_mode = 0
offset_top = 631.0
offset_right = 124.0
offset_bottom = 644.0
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("8_f5q82")
theme_override_font_sizes/font_size = 13
text = "0.0.3 EARLY TEST BUILD"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_slnv3")
}

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Play2" to="." method="_on_play_2_pressed"]
